--- a/inside.html
+++ b/inside.html
@@ -14,15 +14,20 @@
         <div class="background"></div>
         <nav>
             <ul>
-                <li>
-                    <img src="picture/Glitch Logo ETST.png" alt="">
+                <img src="picture/Glitch Logo ETST.png" alt="">
+                <div>
+                    <!-- <i class="fa-solid fa-bars" id="bukas" onclick="open()"></i> -->
+                </div>
+                <li class="list" id="lists">
                     <a class="new" href="#new">New</a>
                     <a class="women" href="">Exclusive</a>
                     <a class="men" href="">About us</a>
+                    <!-- <i class="fa-brands fa-xing" id="sara" onclick="close()"></i> -->
                 </li>
             </ul>
         </nav>
             <div class="front">
+                <img src="picture/Head luffy.png" alt="">
                 <h1>Exclusive T Shirt</h1>
                 <p>SHOP OUR BEST SELLING T SHIRT NOW!!</p>
                 
