--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+        <!-- FOR MOBILE DEVICES -->
         <div class="img">
             <div class="text">
                 <img src="picture/ART.gif" alt="">
